2009-02-02  Dave Brolley  <brolley@redhat.com>

	* NEWS: Update status of client/server.
	* stap-server (initialization): Ensure that all server response
	files are created.
	(check_request): Parse the client's command line here.
	(check_comnpatibility): Don't require client/server platform match
	for phases 1-4.
	(fatal,error): Correct quoting typos.
	stap-server.8.in: Add SSL information.
	* stap-stop-server: Use 'ps -e' to list processes.

2009-02-02  Stan Cox  <scox@redhat.com>

	* NEWS, stapprobes.5.in: Add process.label.

2009-02-01  Stan Cox  <scox@redhat.com>

	* tapsets.cxx (dwflpp::iterate_over_cu_labels): New.
	(query_cu): Use it. 
	(dwarf_derived_probe::register_patterns): Register .label.

2009-02-01  Mark Wielaard  <mjw@redhat.com>

	* translate.cxx (dump_unwindsyms): Process extra_offset with
	dwfl_module_relocate_address.

2009-01-30  Masami Hiramatsu  <mhiramat@redhat.com>

	PR6936
	* configure.ac (AC_CONFIG_FILES): Add initscript/systemtap.in.
	* configure: Regenerated.
	* systemtap.spec: Add systemtap-initscript subpackage.

2009-01-30  Dave Brolley  <brolley@redhat.com>

	* Makefile.am (install-scripts): New target. Set exec_prefix and
	sysconfdir properly in installed scripts.
	* stap-find-or-start-server: Set exec_prefix and sysconfdir for use
	from the source tree by dejagnu. Leave a hook to modify them when
	installed.
	* stap-start-server: Likewise.
	* stap-client (configuration): Likewise. Check for the existence of the
	default certificate databases before checking their security.
	(parse_options): Issue fatal error if no usable certificate databases
	found or specified.
	(check_db,check_db_file): Check that the database and files are owned
	by the user running the client.
	(fatal): Print "ERROR:" tag here. Adjust all callers.
	* stap-server (initialization): Set exec_prefix and sysconfdir for use
	from the source tree by dejagnu. Leave a hook to modify them when
	installed. Check that all specified files and directories exist.