@@ -25,21 +25,21 @@ if  test "X$2" = "X"; then
     echo "Certificate database directory must be specified" >&2
     exit 1
 fi
-if ! test -d $2/client; then
-    if ! mkdir -p -m 755 $2/client; then
-	echo "Unable to find or create the client certificate database directory: $2/client" >&2
+if ! test -d $2; then
+    if ! mkdir -p -m 755 $2; then
+	echo "Unable to find or create the client certificate database directory: $2" >&2
 	exit 1
     fi
 fi
 
 # Add the certificate
-if ! certutil -A -n stap-server -d $2/client -i $1 -t "P,P,P" > /dev/null; then
+if ! certutil -A -n stap-server -d $2 -i $1 -t "P,P,P" > /dev/null; then
     echo "Unable to add $1 to the client certificate database $2" >&2
     exit 1
 fi
 
 # Ensure that the database is readable by others
-if ! chmod +r $2/client/*.db; then
+if ! chmod +r $2/*.db; then
     echo "Warning: unable to make the client certificate database $2 readable by others" >&2
 fi
 
